[package]
name = "exchangeBooth"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.9.4"
thiserror = "1.0.24"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
borsh = {version = "^0.9.3", features = ["const-generics"]}


[lib]
crate-type = ["cdylib", "lib"]